css/design.css
*{
  margin: 0px;
  pading: 0px;
  color: #000000;
}

body{
  background-color: #8d99ae;
  font-family: "Lucida Console", Monaco, monospace;
  transition: margin-left .5s;
}

header{
  background-image: url("./images/header space.png");
  width: 100%;
  height: 350px;
}

section{
  width: 750px;
  border: 2px;
  border-style: solid;
  border-color: #2b2d42;
  margin: 2px;
  padding: 5px;
  text-align: justify;
}

.sidenav{
  height: 100%;
  width: 0;
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
  background-color: #111;
  overflow-x: hidden;
  transition: 0.5s;
  padding-top: 30px;
}

.sidenav a{
  padding: 8px 8px 32px;
  text-decoration: none;
  font-size: 25px;
  color: #818181;
  display: block;
  transition: 0.5s;
}

.sidenav a:hover{
  color: #f1f1f1;
}

.sidenav .closebtn {
    position: absolute;
    top: 0;
    right: 25px;
    font-size: 36px;
    margin-left: 50px;
}

.menubtn:hover{
  color: #ffffff;
  transition: 0.5s;
}

#fixMenubtn{
  position: absolute;
  height: 5%;
  width: 5%;
}

a{
  color: #f8f32b;
}

a:hover{
  color: #ffffff;
}

h1{
  font-size: 300%;
  color: #ffffff;
}

